# quran-lms

./: .gitignore  Software PRD.txt  api.py  components.json  eslint.config.js  index.html  lefthook.yaml  mise.toml  package.json  pnpm-lock.yaml  prettier.config.js  pyproject.toml  readme.md  tsconfig.json  vite.config.js
migrations/: 0001_initial.py
src/: App.svelte  globals.d.ts  main.svelte.js  store.svelte.js
src/components/feature/: feature-card.svelte
src/components/hero/: hero.svelte
src/components/nav/: nav-links.svelte  nav.svelte
src/css/: base.css  tailwind.css
src/lib/: api.js  date.js  preinit.js  quran.js  utils.ts
src/lib/components/: app-sidebar.svelte  data-table.svelte  page-header.svelte  progress-ring.svelte  stat-card.svelte  status-badge.svelte  theme-toggle.svelte
src/lib/components/ui/accordion/: accordion-content.svelte  accordion-item.svelte  accordion-trigger.svelte  accordion.svelte  index.ts
src/lib/components/ui/alert-dialog/: alert-dialog-action.svelte  alert-dialog-cancel.svelte  alert-dialog-content.svelte  alert-dialog-description.svelte  alert-dialog-footer.svelte  alert-dialog-header.svelte  alert-dialog-overlay.svelte  alert-dialog-portal.svelte  alert-dialog-title.svelte  alert-dialog-trigger.svelte  alert-dialog.svelte  index.ts
src/lib/components/ui/avatar/: index.ts  (+3 more)
src/lib/hooks/: is-mobile.svelte.ts
src/routes/: Attendance.svelte  Dashboard.svelte  Home.svelte  Homework.svelte  Lessons.svelte  Muraja.svelte  NotFound.svelte  Points.svelte  Reports.svelte  Settings.svelte  Students.svelte  Teachers.svelte
(+284 files in other folders)
